--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -68,6 +68,8 @@ limitations under the License. *
     src='@routes.Assets.at("javascripts/keyword_tree.js")'></script>
     <script type='text/javascript'
     src='@routes.Assets.at("javascripts/main.js")'></script>
+    <script type='text/javascript'
+    src='@routes.Assets.at("javascripts/home.js")'></script>
 
     <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
   </head>
@@ -168,7 +170,11 @@ limitations under the License. *
                       <div id="post_original_content_@postAndComments.getPost.getId" class="col-sm-9 col-md-9 col-lg-9">
                         @postAndComments.getPost.getContent
                       </div>
-                      <div data-value="@postAndComments.getPost.getId" class="col-sm-1 col-md-1 col-lg-1 glyphicon glyphicon-pencil cursor"></div>
+                      @if(postAndComments.getPost.getAuthorId.equals(viewerId)) {
+                        <div data-value="@postAndComments.getPost.getId" class="col-sm-1 col-md-1 col-lg-1 glyphicon glyphicon-pencil cursor"></div>
+                      }else{
+
+                      }
                     </div>
                     <div id="post_edit_@postAndComments.getPost.getId" class="row" style="display:none">
                       <div class="col-sm-2 col-md-2 col-lg-2">
@@ -202,13 +208,29 @@ limitations under the License. *
                         <div data-value="@postAndComments.getPost.getNumOfLikes" title="@postAndComments.getPost.getId"
                         class="fa fa-thumbs-o-up fa-lg cursor" style="margin-top:15px"></div>
                       </div>
-                      <div id="post_delete_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1">
-                        <button data-value="@postAndComments.getPost.getId" class="btn btn-primary delete_button">Delete</button>
-                      </div>
-                      <div id="post_update_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1" style="display: none">
-                        <button data-value="@postAndComments.getPost.getId" class="btn btn-primary update_button">Update</button>
-                      </div>
-                    </div>
+                      @if(postAndComments.getPost.getAuthorId.equals(viewerId)) {
+                        <div id="post_delete_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1">
+                          <button data-value="@postAndComments.getPost.getId" class="btn btn-primary delete_button">
+                            Delete</button>
+                        </div>
+                        <div id="post_update_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1" style="display: none">
+                          <button data-value="@postAndComments.getPost.getId" class="btn btn-primary update_button">Update</button>
+                        </div>
+                        </div>
+                        <select class="selectpicker" onchange="changeSecurity(@postAndComments.getPost.getId, this);" data-style="btn-success" name="security" >
+                          @if(postAndComments.getPost.getSecurtiry.equals("public")) {
+                            <option value="public" selected="selected">Public</option>
+                          }else{
+                            <option value="public">public</option>
+                          }
+                          @if(postAndComments.getPost.getSecurtiry.equals("private")) {
+                            <option value="private" selected="selected">private</option>
+                          }else{
+                            <option value="private">private</option>
+                        </select>
+                      }
+
+                    }
                   </div>
 
                   <hr>
