--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -69,6 +69,9 @@ limitations under the License. *
 	src='@routes.Assets.at("javascripts/home.js")'></script>
 <script type='text/javascript'
 	src='@routes.Assets.at("javascripts/main.js")'></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgw45moJnSiqPr1vtXTbWlqBEjLN7YIqw&signed_in=true&callback=initMap"
+		        async defer>
+		    </script>
 
 <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 </head>
@@ -144,7 +147,14 @@ limitations under the License. *
 								<input type="text" class="form-control clearfix"
 									placeholder="What's on your mind?" id="postContent"
 									name="postContent">
+									<input id="location" type="hidden">
+									<input id="includeL" value="yes" type="hidden">
 								<hr>
+								<div>
+								<input type="checkbox" id="cbox1" checked="checked">
+								<label> Share Location</label>
+								</div>
+								 <div id="map" style="height:200px"></div>
 								<div class="row">
 									<div class="col col-sm-8" id="column-2">
 										<select class="selectpicker" data-style="btn-success" name="security" >
@@ -154,7 +164,7 @@ limitations under the License. *
 									</div>
 									<div class="col col-sm-4" id="column-3">
 										<div class="col-sm-offset-11 col-sm-1">
-											<button type="submit" class="btn btn-primary"
+											<button type="submit" id="btnSub" class="btn btn-primary"
 											style="float: right">Post</button>
 										</div>
 									</div>
