--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -142,18 +142,16 @@ limitations under the License. *
                   name="postContent">
                   <hr>
                   <div class="row">
-                    <div class="col col-sm-8" id="column-2">
+                    <div class="col-sm-2 col-md-2 col-lg-2" id="column-2">
                       <select class="selectpicker" data-style="btn-success" name="security" >
                         <option value="public" selected="selected">Public</option>
                         <option value="friendly">Friendly</option>
                         <option value="private">Private</option>
                       </select>
                     </div>
-                    <div class="col col-sm-4" id="column-3">
-                      <div class="col-sm-offset-11 col-sm-1">
+                    <div class="col-sm-offset-9 col-md-offset-9 col-lg-offset-9 col-lg-1 col-md-1 col-sm-1" id="column-3">
                         <button type="submit" class="btn btn-primary"
                         style="float: right">Post</button>
-                      </div>
                     </div>
                   </div>
                   <input type="hidden" name="authorId" value="@user.getId">
@@ -221,7 +219,7 @@ limitations under the License. *
                     </div>
                     @if(postAndComments.getPost.getAuthorId.equals(viewerId)) {
                       <div class="row">
-                        <div class="col-sm-1 col-lg-2 col-md-2">
+                        <div class="col-sm-2 col-lg-2 col-md-2">
                           <select class="selectpicker" onchange="changeSecurity(@postAndComments.getPost.getId, this);" data-style="btn-success" name="security" >
                             @if(postAndComments.getPost.getSecurtiry.equals("public")) {
                               <option value="public" selected="selected">Public</option>
@@ -235,6 +233,7 @@ limitations under the License. *
                             }
                           </select>
                         </div>
+                        <div class="col-sm-10 col-lg-10 col-md-10"></div>
                       </div>
                     }
 
