--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -54,7 +54,7 @@
                 class="caret"></b></a>
                     <ul class="dropdown-menu">
 
-                        <li><a href="@routes.LoginController.login()">Log Out</a></li>
+                        <li><a href="@routes.HomeController.logout()">Log Out</a></li>
 
                     </ul>
 
