--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -31,7 +31,7 @@
 
                 <li><a href="@routes.HomeController.myHome()">Home</a>
                 </li>
-                <li><a href="@routes.ProfileController.get(id)">About</a></li>
+                <li><a href="@routes.ProfileController.myProfile()">About</a></li>
                 <li><a href="@routes.CriteriaController.home(id)">Users</a></li>
                 <li><a href="@routes.MainController.home(id)">Main</a>
                 </li>
