Make header only direct the user according to viewerID

--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -29,11 +29,10 @@
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" style="height :">
             <ul class="nav navbar-nav">
 
-                <li><a href="@routes.HomeController.myHome()">Home</a>
-                </li>
+                <li><a href="@routes.HomeController.myHome()">Home</a></li>
                 <li><a href="@routes.ProfileController.myProfile()">About</a></li>
-                <li><a href="@routes.CriteriaController.home(id)">Users</a></li>
-                <li><a href="@routes.MainController.home(id)">Main</a>
+                <li><a href="@routes.CriteriaController.myHome()">Users</a></li>
+                <li><a href="@routes.MainController.myHome()">Main</a>
                 </li>
             </ul>
             <div class="col-sm-3 col-md-3">
