--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -74,7 +74,7 @@ limitations under the License. *
     <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
   </head>
   <body>
-    @header(user.getUserName(), user.getId().toString)
+    @header(User.get(viewerId).getUserName, User.get(viewerId).getId.toString)
     <br />
     <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
       <div class="row panel wall-paper">
