--- a/ApacheCMDA-Frontend/app/views/network/searchUser.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/searchUser.scala.html
@@ -72,7 +72,7 @@ searchedUser: List[User], follow:Int)
 <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 </head>
 <body>
-	@header(user.getUserName(), user.getId().toString)
+	@header(User.get(viewerId).getUserName, User.get(viewerId).getId.toString)
 	<br />
 	<div class="container" style="margin-top: 20px; margin-bottom: 20px;">
 		<div class="row panel wall-paper">
