Fix share frontend bug

--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -213,9 +213,9 @@ limitations under the License. *
                         </div>
                       }else {
                         <div id="post_share_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1">
-                            <button data-value="@postAndComments.getPost.getId" data-toggle="modal" data-target="#newShare" class="btn btn-primary share_button">
+                            <button data-value="@postAndComments.getPost.getId" data-toggle="modal" data-target="#newShare_@postAndComments.getPost.getId" class="btn btn-primary share_button">
                             Share</button>
-                            <div class="modal fade" id="newShare" tabindex="-1" role="dialog" aria-labelledby="newAnnouncementLabel">
+                            <div class="modal fade" id="newShare_@postAndComments.getPost.getId" tabindex="-1" role="dialog" aria-labelledby="newAnnouncementLabel">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
