--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -79,12 +79,15 @@ limitations under the License. *
     <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
       <div class="row panel wall-paper">
         <div class="col-md-4 bg_blur ">
+        @if(!String.valueOf(user.getId).equals(viewerId)) {
           @if(follow==1){
             <a href="/network/follow/@viewerId/@user.getId" class="follow_btn hidden-xs">
               Follow  </a>}
           @if(follow==0){
             <a href="/network/unfollow/@viewerId/@user.getId" class="follow_btn hidden-xs">
-              Unfollow</a>}
+              Unfollow</a>
+              }
+              }
         </div>
         <div class="col-md-8  col-xs-12">
           <img src="@user.getUrl" class="img-thumbnail picture hidden-xs" />
@@ -250,7 +253,7 @@ limitations under the License. *
                             }
                           </select>
                         </div>
-                        <div class="col-sm-10 col-lg-10 col-md-10"></div>
+                        <div class="col-sm-10 col-lg-10 col-md-10">@postAndComments.getPost.getLocation</div>
                       </div>
                     }
 
