--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -215,8 +215,24 @@ limitations under the License. *
                       </div>
                       @if(postAndComments.getPost.getAuthorId.equals(viewerId)) {
                         <div id="post_delete_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1">
-                          <button data-value="@postAndComments.getPost.getId" class="btn btn-primary delete_button">
+                          <button data-value="@postAndComments.getPost.getId" data-toggle="modal" data-target="#newDelete_@postAndComments.getPost.getId" class="btn btn-primary delete_button">
                             Delete</button>
+                          <div class="modal fade" id="newDelete_@postAndComments.getPost.getId" tabindex="-1" role="dialog" aria-labelledby="newLabel">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                  <h4 class="modal-title" id="newAnnouncementLabel">Are you sure you want to delete this post?</h4>
+                                </div>
+                                <div class="modal-body">
+                                  <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" data-value="@postAndComments.getPost.getId" data-dismiss="modal" class="btn btn-primary delete_button_popup">Delete</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                         </div>
                         <div id="post_update_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1" style="display : none">
                           <button data-value="@postAndComments.getPost.getId" class="btn btn-primary update_button">
@@ -226,7 +242,7 @@ limitations under the License. *
                         <div id="post_share_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1">
                             <button data-value="@postAndComments.getPost.getId" data-toggle="modal" data-target="#newShare_@postAndComments.getPost.getId" class="btn btn-primary share_button">
                             Share</button>
-                            <div class="modal fade" id="newShare_@postAndComments.getPost.getId" tabindex="-1" role="dialog" aria-labelledby="newAnnouncementLabel">
+                            <div class="modal fade" id="newShare_@postAndComments.getPost.getId" tabindex="-1" role="dialog" aria-labelledby="newLabel">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
@@ -236,7 +252,7 @@ limitations under the License. *
                                         <div class="modal-body">
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="submit" data-value="@postAndComments.getPost.getId" data-dismiss="modal" class="btn btn-primary">Share</button>
+                                                <button type="submit" data-value="@postAndComments.getPost.getId" data-dismiss="modal" class="btn btn-primary share_button_popup">Share</button>
                                             </div>
                                         </div>
                                     </div>
