--- a/ApacheCMDA-Frontend/public/stylesheets/main.css
+++ b/ApacheCMDA-Frontend/public/stylesheets/main.css
@@ -15,6 +15,10 @@ border: 1px solid black;
     float:right;
     margin-top:10px
 }
+.delete_button_popup
+{
+
+}
 .update_button
 {
     float:right;
@@ -24,6 +28,10 @@ border: 1px solid black;
 {
     float:right;
     margin-top:10px
+}
+.share_button_popup
+{
+
 }
 .commenter_color
 {
