Add keyword suggestion note that: each keyword must been input at least 3 times more

--- a/ApacheCMDA-Frontend/app/views/network/searchPost.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/searchPost.scala.html
@@ -70,6 +70,15 @@ limitations under the License. *
 		src='@routes.Assets.at("javascripts/main.js")'></script>
 		<script type='text/javascript'
 		src='@routes.Assets.at("javascripts/home.js")'></script>
+		<link rel="stylesheet"
+		href='@routes.Assets.at("stylesheets/awesomplete.css")'>
+
+		<script type='text/javascript'
+		src='@routes.Assets.at("javascripts/awesomplete.js")'></script>
+
+		<script type='text/javascript'
+		src='@routes.Assets.at("javascripts/header.js")'></script>
+
 
 		<script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 	</head>
