--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -72,6 +72,15 @@ limitations under the License. *
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgw45moJnSiqPr1vtXTbWlqBEjLN7YIqw&signed_in=true&callback=initMap"
 	async defer> </script>
 
+<link rel="stylesheet"
+	href='@routes.Assets.at("stylesheets/awesomplete.css")'>
+
+<script type='text/javascript'
+	src='@routes.Assets.at("javascripts/awesomplete.js")'></script>
+
+<script type='text/javascript'
+	src='@routes.Assets.at("javascripts/header.js")'></script>
+
 <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 </head>
 <body>
