--- a/ApacheCMDA-Frontend/app/views/network/profile.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/profile.scala.html
@@ -59,8 +59,18 @@
 
         <script type='text/javascript' src='@routes.Assets.at("javascripts/jstree.js")'></script>
         <script type='text/javascript' src='@routes.Assets.at("javascripts/keyword_tree.js")'></script>
-
         <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
+        <link rel="stylesheet"
+        href='@routes.Assets.at("stylesheets/awesomplete.css")'>
+
+        <script type='text/javascript'
+        src='@routes.Assets.at("javascripts/awesomplete.js")'></script>
+
+        <script type='text/javascript'
+        src='@routes.Assets.at("javascripts/header.js")'></script>
+
+
+
     </head>
     <body>
         @header(user.getUserName(), user.getId().toString)
