--- a/ApacheCMDA-Frontend/app/views/network/searchUser.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/searchUser.scala.html
@@ -66,8 +66,15 @@ searchedUser: List[User], follow:Int)
 	src='@routes.Assets.at("javascripts/jstree.js")'></script>
 <script type='text/javascript'
 	src='@routes.Assets.at("javascripts/keyword_tree.js")'></script>
+
+<link rel="stylesheet"
+	href='@routes.Assets.at("stylesheets/awesomplete.css")'>
+
 <script type='text/javascript'
-	src='@routes.Assets.at("javascripts/home.js")'></script>
+	src='@routes.Assets.at("javascripts/awesomplete.js")'></script>
+
+<script type='text/javascript'
+	src='@routes.Assets.at("javascripts/header.js")'></script>
 
 <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 </head>
