--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -12,7 +12,7 @@ OR CONDITIONS OF ANY KIND, either express or implied. * * See the
 License for the specific language governing permissions and * *
 limitations under the License. *
 *******************************************************************************@
-@(user: User, userForm: play.data.Form[User], users: List[User], viewerId: String, postsAndComments: List[PostAndComments], follow:Int)
+@(user: User, userForm: play.data.Form[User], users: List[User], pymf: List[User], viewerId: String, postsAndComments: List[PostAndComments], follow:Int)
 @import util.TimeConvert
 
 
@@ -146,7 +146,35 @@ limitations under the License. *
 			</div>
 		</div>
 		<div class="box row" id="main">
-			<div class="col-md-4 row-xs-12"></div>
+			<div class="col-md-4 row-xs-12">
+				@if(!pymf.isEmpty) {
+					<div class="alert alert-success" role="alert">
+						People you may follow
+					</div>
+				}
+				@for(u <- pymf) {
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-sm-12 col-lg-12 col-md-12">
+									@u.getFirstName @u.getLastName
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-sm-12 col-md-12 col-lg-12">
+									title: @u.getTitle
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-sm-12 col-md-12 col-lg-12">
+									research: @u.getResearchFields
+								</div>
+							</div>
+						</div>
+					</div>
+				}
+
+			</div>
 			<div class="col-md-8 col-xs-12" style="margin: 0px; padding: 0px;">
 				<!-- /top nav -->
 				<div class="full col-sm-12">
